fixed button & left-aligned .class in third-sec.

--- a/docs/style.css
+++ b/docs/style.css
@@ -190,7 +190,7 @@ img {
     /* height:350px; */
     padding:20px;
     background: rgb(16, 16, 16);
-    margin:20px;
+    margin: 20px 20px 20px 0;
     border-radius: 10px;
     transition:1s;
 }
@@ -267,12 +267,12 @@ a{
 }
 
 .second-section {
-    background-color: #10254f;
+    background-color: #23222c;
     height: 80vh;
 }
 
 .third-section {
-    background: #23222c;
+    background: #10254f;
     position: relative;
     height: 100vh;
 }
